2002-02-25  Joel Rosdahl  <joel@lysator.liu.se>

	* commands2.el (lyskom-do-list-summary): Print Written/Skrivet
	instead of Date/Datum in review lists.

	* swedish-strings.el (lyskom-message): Datum --> Skrivet.

	* english-strings.el (lyskom-message): Date --> Written.

2002-02-24  Joel Rosdahl  <joel@lysator.liu.se>

	* copyright: Ditto.

	* Makefile: Ditto.

	* *.el: Unified copyright year range to 1991-2002.  Changed "This
	file is part of the LysKOM server" to "This file is part of the
	LysKOM Emacs LISP client".

	* utilities.el (lyskom-find-text-by-date): Removed unused local
	variable.

2002-02-24  David Byers  <davby@sen2.ida.liu.se>

	* utilities.el (lyskom-find-text-by-date): Fixed assignment to
	date variable inside the binary search loop. Use date variable in
	later comparison.

2002-02-24  Joel Rosdahl  <joel@lysator.liu.se>

	* mship-edit.el (lyskom-read-time): Commented out code that
	generated a compilation warning.

	* vars.el.in (kom-server-aliases): Added com.lysator.liu.se.

	* swedish-strings.el: Corrected terminology in
	quit-in-spite-of-unsent.

2002-02-18  Per Cederqvist  <ceder@moria>

	* commands2.el (lyskom-create-text-buffer): New helper function.
	(kom-compare-texts): Use blocking-do-multiple for efficiency and
	lyskom-create-text-buffer to simplify the code.

2002-02-09  Per Cederqvist  <ceder@lysator.liu.se>

	New command: "Compare two texts".

	* vars.el.in (lyskom-commands): Added kom-compare-texts.

	* swedish-strings.el (lyskom-message): Added diff-what-text-new
	and diff-what-text-old.
	(lyskom-command): Added kom-compare-texts.
	(lyskom-help-strings): Added kom-compare-texts.

	* english-strings.el (lyskom-message): Added diff-what-text-new
	and diff-what-text-old.
	(lyskom-command): Added kom-compare-texts.

	* commands2.el (kom-compare-texts): New command.

	* commands1.el (lyskom-text-stat-commented-texts): New function.
	(lyskom-view-commented-text): Extract the computation of the