@@ -1,5 +1,5 @@
 ;;;;; -*-coding: raw-text;mode: emacs-lisp;-*-
-;;;;; $Id: vars.el.in,v 44.163 2002-02-24 20:23:28 joel Exp $
+;;;;; $Id: vars.el.in,v 44.164 2002-02-25 18:17:09 joel Exp $
 ;;;;; Copyright (C) 1991-2002  Lysator Academic Computer Association.
 ;;;;;
 ;;;;; This file is part of the LysKOM Emacs LISP client.
@@ -33,7 +33,7 @@
 
 (setq lyskom-clientversion-long 
       (concat lyskom-clientversion-long
-	      "$Id: vars.el.in,v 44.163 2002-02-24 20:23:28 joel Exp $\n"))
+	      "$Id: vars.el.in,v 44.164 2002-02-25 18:17:09 joel Exp $\n"))
 
 (defvar lyskom-mule-compiled
   (eval-when-compile (and (fboundp 'multibyte-string-p)
@@ -993,7 +993,7 @@ Do not use this variable for proxy authentication.")
 
 (def-kom-var kom-server-aliases
   '(("kom.lysator.liu.se" . "LysKOM")
-    ("com.lysator.liu.se" . "English-LysKOM")
+    ("com.lysator.liu.se" . "LysCOM (LysKOM in English)")
     ("kom.ludd.luth.se" . "LuddKOM")
     ("kom.hem.liu.se" . "RydKOM")
     ("kom.csd.uu.se" . "CSD-KOM")
